<resources>
    <string name="app_name">Adapto</string>

    <!--  AUTHENTICATION ACTIVITY  -->
    <string name="auth_title">WELCOME TO \nADAPTO</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Senha</string>
    <string name="auth_edtEmail">Digite seu email</string>
    <string name="auth_edtPassword">Digite sua senha</string>
    <string name="adaptoLogo">Adapto Logo image</string>

    <!-- ONBOARDING FRAGMENT -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvOnboardingTitle">Apoie a diversidade!</string>
    <string name="tvOnboardingSubtitle">Como deseja continuar?</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Criar uma conta</string>
    <string name="btnPular">Pular essa etapa</string>

    <!-- LOGIN FRAGMENT -->
    <string name="login_subtitle">Entrar</string>
    <string name="login_button">Entrar</string>
    <string name="auth_register_link">Criar minha conta</string>

    <!-- REGISTER FRAGMENT -->
    <string name="register_subtitle">Criar conta</string>
    <string name="register_first_name">Nome</string>
    <string name="register_last_name">Sobrenome</string>
    <string name="register_button">Criar conta</string>

    <!-- LOGGED HOME -->
    <string name="menu_toolbar">Menu Toolbar</string>
    <string name="home_greetings">Olá!</string>
    <string name="home_pesquisar">Pesquisar</string>
    <string name="home_trabalhos">Exposição de trabalhos</string>
    <string name="home_vagas">Vagas disponíveis</string>
    <string name="lorem_ipsum">Lorem ipsum</string>

    <!-- DRAWER MENU -->
    <string name="menu_home">HOME</string>
    <string name="menu_perfil">PERFIL</string>
    <string name="menu_vagas">VAGAS</string>
    <string name="menu_sair">SAIR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>