<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_perfil" />

        <item android:id="@+id/nav_vagas"
            android:icon="@drawable/ic_work"
            android:title="@string/menu_vagas" />

        <item android:id="@+id/nav_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sair" />

    </group>

</menu>