<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/light_bg"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_screen_img"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivAdaptoLogo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="90dp"
        android:src="@drawable/adapto_logo"
        android:contentDescription="@string/adaptoLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginSubtitle"/>

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/ivAdaptoLogo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        android:autofillHints="Password" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textStyle="bold"
        android:textSize="24sp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnRegisterLink"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail" />

    <Button
        android:id="@+id/btnRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_link"
        android:textColor="@color/onPrimaryColor"
        android:background="@color/invisible"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEntrar" />

    <View
        android:id="@+id/viewLoading"
        android:background="#99ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="pbLoading, viewLoading"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>