<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/offwhite"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoggedHomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbLoggedHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivMenuToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu_toolbar"/>

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_greetings"
        android:textColor="@color/onPrimaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilSearchHome"
        app:layout_constraintTop_toBottomOf="@id/tbLoggedHome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearchHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTitle"
        app:startIconDrawable="@drawable/ic_search_icon" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSearchHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/general_input_bg"
            android:hint="@string/home_pesquisar"
            android:textColorHint="@color/primaryColor"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHomeTrabalhos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_trabalhos"
        android:textColor="@color/onPrimaryColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSearchHome"
        android:layout_marginTop="16dp"/>

    <HorizontalScrollView
        android:id="@+id/recyclerTrabalhos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTrabalhos">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHomeTrabalhos"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_trabalho"
            android:orientation="horizontal"/>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvHomeVagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_vagas"
        android:textColor="@color/onPrimaryColor"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerTrabalhos" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHomeVagas"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_vaga"/>


    <TextView
        android:id="@+id/tvHomeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvHomeToken"
        app:layout_constraintTop_toBottomOf="@id/recyclerTrabalhos" />

    <TextView
        android:id="@+id/tvHomeToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHomeEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>